# XTEC-GPU

./: .gitignore  DEVELOPMENT.md  LICENSE  OUTPUT_CONTRACT.md  README.md  agent.md  claude.md  gemini.md  implementation_plan.md  mcp_config.example.json  performance_comparision.md  pyproject.toml  running_instructions.md  setup.py
scripts/: generate_cpu_gpu_tutorial_outputs.py  xtec_agentic_workflow.py  xtec_workflow_mcp.py
scripts/baseline/: snapshot_cli_surface.py
scripts/benchmarks/: compare_agentic_outputs.py  profile_agentic_workflow.py
src/: GMM.py  Preprocessing.py  xtec_cli.py
src/plugins/: cluster_data.py
src/xtec_gpu/: GMM.py  __init__.py  streamed_preprocessing.py  xtec_cli.py
src/xtec_gpu/config/: __init__.py  run_config.py
src/xtec_gpu/plugins/: __init__.py  cluster_data.py
src/xtec_gpu/workflows/: README.md  __init__.py  agentic.py  comparison.py  logging_utils.py  shared.py  types.py
tests/: test_refactor_regressions.py
tutorials/: Tutorial_XTEC_GPU-d.ipynb  Tutorial_XTEC_GPU-s_with_peak_averaging.ipynb
