[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XTEC-GPU"
version = "1.0.0"
description = "X-ray Temperature Clustering — GPU-accelerated"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Yanjun Liu"},
    {name = "Aaditya Panigrahi", email = "ap2563@cornell.edu"},
]
maintainers = [
    {name = "Aaditya Panigrahi", email = "ap2563@cornell.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "torch>=1.13",
    "torchgmm",
    "nexusformat",
    "h5py",
]

[project.optional-dependencies]
nexpy = ["nexpy"]
cu129 = ["torch>=2.8"]

[project.scripts]
xtec-gpu = "xtec_gpu.xtec_cli:main"

[project.entry-points."nexpy.plugins"]
xtec_gpu = "xtec_gpu.plugins:plugin_menu"

[project.urls]
Homepage = "https://github.com/KimGroup/XTEC-GPU"
Repository = "https://github.com/KimGroup/XTEC-GPU"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79

# ── uv-specific configuration ──────────────────────────────────────
# Usage (to add this project with CUDA support to another uv project):
#   uv add .            # Default: CUDA 13.0
#   uv add ".[cu129]"   # CUDA 12.9 (e.g. Polaris @ ALCF)
#
# (To simply sync the local development environment, use: uv sync)

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu129", extra = "cu129" },
    { index = "pytorch-cu130" },
]
