[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "XTEC-GPU"
version = "1.1.0"
description = "X-ray Temperature Clustering — GPU-accelerated"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yanjun Liu"},
    {name = "Aaditya Panigrahi", email = "ap2563@cornell.edu"},
]
maintainers = [
    {name = "Aaditya Panigrahi", email = "ap2563@cornell.edu"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "torchgmm",
    "nexusformat",
    "h5py",
]

[project.optional-dependencies]
nexpy = ["nexpy"]

# Choose exactly one of these extras when syncing local development:
#   uv sync --extra cu129
#   uv sync --extra cu130
#
# To install this package into another project (like on ALCF Polaris):
#   uv add "xtec-gpu[cu129] @ git+https://github.com/aadityapanigrahi/XTEC-GPU.git"
#
# (If you prefer a default CPU/CUDA 13.0, keep cu130 and just don't pass --extra.)
cu129 = ["torch>=2.8"]
cu130 = ["torch>=2.8"]

[project.scripts]
xtec-gpu = "xtec_gpu.xtec_cli:main"

[project.entry-points."nexpy.plugins"]
xtec_gpu = "xtec_gpu.plugins:plugin_menu"

[project.urls]
Homepage = "https://github.com/KimGroup/XTEC-GPU"
Repository = "https://github.com/KimGroup/XTEC-GPU"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 79

# ── uv-specific configuration ──────────────────────────────────────
# PyTorch CUDA wheel indexes (explicit so uv won't use them unless directed).
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

# Route torch to the correct index depending on the selected extra.
# Using explicitly disjoint markers so uv resolves correctly.
[tool.uv.sources]
torch = [
  { index = "pytorch-cu129", marker = "sys_platform == 'linux' and extra == 'cu129'" },
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' and extra == 'cu130' and extra != 'cu129'" },
]
